--- a/styles/global.css
+++ b/styles/global.css
@@ -25,3 +25,9 @@ img {
   max-width: 100%;
   display: block;
 }
+
+.flexContainer {
+  display: flex;
+  margin: 2rem;
+  flex-direction: column;
+}
