--- a/styles/linkHeader.module.css
+++ b/styles/linkHeader.module.css
@@ -5,5 +5,9 @@
   width: 100%;
   justify-items: center;
   border-bottom: solid black 1px;
+  margin-top: 1rem;
+}
 
+.container > {
+  text-decoration: wavy;
 }
