--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  background-color:rgb(221, 240, 240);
 }
 
 * {
@@ -34,4 +35,10 @@ img {
 
 h3 {
   margin-bottom: 0;
+}
+
+.linkbar a{
+  padding: 0.2rem 1rem;
+  background-color: rgb(217, 209, 195);
+  font-family: 'Zilla Slab', serif;
 }
