--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -89,6 +89,7 @@
   opacity: 1;
   flex-direction: column;
   box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+  width: 80%;
 }
 
 .excerpt {
