--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
-  background-color:rgb(221, 240, 240);
+  background-color:#F6FFF3;
 }
 
 * {
