--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -31,6 +31,10 @@
   align-self: flex-start;
 }
 
+.headingMid {
+  margin-top: 2rem;
+}
+
 .borderCircle {
   border-radius: 9999px;
 }
@@ -56,14 +60,15 @@
 
 .cardHolder {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row wrap
 }
 
 .cardContent a{
   align-self: center;
   font-family: 'Amatic SC', cursive;
   font-weight: 700;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
+  color: #3FA9CA;
 }
 
 .cardContent {
@@ -77,7 +82,7 @@
   border: 1px hsla(0, 0, 0, 0) solid;
   border-radius: 0.5rem;
   padding: 0.5rem;
-  background-color: rgb(250, 255, 255);
+  background-color: rgb(255, 255, 255);
   opacity: 1;
   flex-direction: column;
   box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
@@ -89,4 +94,25 @@
   line-height: normal;
   /* font-style: italic; */
   font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+}
+
+.title {
+          margin: 0;
+          line-height: 1.15;
+          font-size: 4rem;
+          grid-row: 1;
+          grid-column: 2;
+        }
+
+.date {
+  font-size: 0.7rem;
+  color:rgb(107, 100, 100);
+}
+.image {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transform: scale(0.8);
 }
