--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -9,7 +9,6 @@
   letter-spacing: -0.05rem;
   margin: 1rem 0;
 }
-
 .headingXl {
   font-size: 2rem;
   line-height: 1.3;
@@ -92,9 +91,9 @@
   color: rgb(107, 100, 100);
   font-size: 0.8rem;
   line-height: normal;
-  /* font-style: italic; */
+  font-style: italic;
   font-family: 'Roboto', sans-serif;
-  font-weight: 700;
+  font-weight: 300;
 }
 
 .title {
